feat(core): allow support for multiple keyframes

--- a/src/demos/index.html
+++ b/src/demos/index.html
@@ -56,10 +56,11 @@ button.addEventListener('click', function() {
   var el2 = document.getElementById('animate2');
   var animation = [
     {height: "150px", transform: 'rotate(0deg)', background:'hsla(120,100%,50%,0.5)'},
-    {height: "400px", transform: 'rotate(360deg)', background:'rgba(255,100,0,0.2)'}
+    {height: "400px", transform: 'rotate(360deg)', background:'rgba(255,100,0,0.2)'},
+    {height: "200px", transform: 'rotate(100deg)', background:'maroon'}
   ];
   var options = {
-    duration: 5000,
+    duration: 10000,
     fill: 'forwards',
     easing: 'cubic-bezier(0,-0.85,0,.69)'
   };
