--- a/src/demos/index.html
+++ b/src/demos/index.html
@@ -61,7 +61,7 @@ button.addEventListener('click', function() {
   ];
   var options = {
     duration: 10000,
-    fill: 'forwards',
+    delay: 2000,
     easing: 'cubic-bezier(0,-0.85,0,.69)'
   };
 
